[package]
name = "amf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"

[features]
default = [
    "amf3",
    "amf0",
]

amf3 = [
    "amf3-integer",
    "amf3-double",
    "amf3-string",
    "amf3-xml_doc",
    "amf3-date",
    "amf3-array",
    "amf3-object",
    "amf3-xml",
    "amf3-byte_array",
    "amf3-vector_int",
    "amf3-vector_uint",
    "amf3-vector_double",
    "amf3-vector_object",
    "amf3-dictionary",
]
amf3-integer = []
amf3-double = []
amf3-string = []
amf3-xml_doc = []
amf3-date = []
amf3-array = []
amf3-object = []
amf3-xml = []
amf3-byte_array = []
amf3-vector_int = []
amf3-vector_uint = []
amf3-vector_double = []
amf3-vector_object = []
amf3-dictionary = []

amf0 = [
    "amf0-number",
    "amf0-boolean",
    "amf0-string",
    "amf0-object",
    "amf0-reference",
    "amf0-ecma_array",
    "amf0-strict_array",
    "amf0-date",
    "amf0-xml_document",
    "amf0-avmplus",
]
amf0-number = []
amf0-boolean = []
amf0-string = []
amf0-object = []
amf0-reference = []
amf0-ecma_array = []
amf0-strict_array = []
amf0-date = []
amf0-xml_document = []
amf0-avmplus = ["amf3"]
